# SimpleRayTracer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  compile.bat  light.hpp  main.cpp  makedir.py  makefile  rt_app.cpp  rt_app.h
glc-1.0.0/GL/: glc.h
lib/glc-1.0.0/GL/: glc.h
rt/: app.h  buffer.h  cubemap.h  distancesphere.h  infplane.h  light.h  primitive.h  ray_tracing.h  rt_error.h  rt_types.h  sphere.h
rt/image/: cubemap.cpp  cubemap.h  framebuffer.h  image.h  spherical_map.h  texture.cpp  texture.h
rt/misc/: app.cpp  app.h  buffer.cpp  buffer.h  rt_error.h  rt_types.h
rt/primitive/: distancesphere.cpp  distancesphere.h  infplane.cpp  infplane.h  primitive.cpp  primitive.h  sphere.cpp  sphere.h
rt/src/: app.cpp  buffer.cpp  cubemap.cpp  distancesphere.cpp  infplane.cpp  light.cpp  primitive.cpp  sphere.cpp
